--- a/style.css
+++ b/style.css
@@ -123,6 +123,23 @@ h3 {
     background-color: #E6D298;
 }
 
+/* ALTERAÇÃO PARA "COMO AJUDAR" IGUAL AO "FALE CONOSCO" */
+.cta-buttons .btn-secondary {
+    background-color: var(--yellow-welcoming);
+    color: var(--dark-grey);
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 5px;
+    padding: 15px 30px;
+    margin: 10px;
+    display: inline-block;
+    transition: background-color 0.3s;
+}
+
+.cta-buttons .btn-secondary:hover {
+    background-color: #E6D298;
+}
+
 /* SEÇÕES */
 .about-us, .services, .methodology, .help {
     background-color: var(--light-neutral);
